# gan-mnist

./: mnist_cgan_mlp.py  mnist_gan_mlp.py  pyproject.toml
